--- a/timenest-landing-page/templates/main.html
+++ b/timenest-landing-page/templates/main.html
@@ -121,6 +121,9 @@
                         <button class="btn-today"><p>Today</p></button>
                     </div>
                     <div class="day">
+                        <button><img src="/static/Expand_left.svg" style="width: 35px"></button>
+                        <button><img src="/static/Expand_right.svg" style="width: 32px"></button>
+                        <p>27.09.2024</p>
                     </div>
                     <div class="right">
                         <div class="view">
@@ -133,68 +136,45 @@
                     </div>
                 </div>
                 <section class="Calender">
-                    <div class = "blank"></div>
-                    <div class="weekview_date_header">
-                      <div class="Sunday">
-                        <div class="date">
-                          <p class="day_of_week">Sun</p>
-                          <br />
-                          <p class="date_of_sun">26</p>
+                        <div class="Blank_part"></div>
+                        <div class="weekview_date_header">
+                            <div>
+                                <p class="day_of_week"></p>
+                                <p class="calendar-day"></p>
+                            </div>
+                            <div>
+                                <p class="day_of_week"></p>
+                                <p class="calendar-day"></p>
+                            </div>
+                            <div>
+                                <p class="day_of_week"></p>
+                                <p class="calendar-day"></p>
+                            </div>
+                            <div>
+                                <p class="day_of_week"></p>
+                                <p class="calendar-day"></p>
+                            </div>
+                            <div>
+                                <p class="day_of_week"></p>
+                                <p class="calendar-day"></p>
+                            </div>
+                            <div>
+                                <p class="day_of_week"></p>
+                                <p class="calendar-day"></p>
+                            </div>
+                            <div>
+                                <p class="day_of_week"></p>
+                                <p class="calendar-day"></p>
+                            </div>
                         </div>
-                      </div>
-                      <div class="Monday">
-                        <div class="date">
-                          <p class="day_of_week">Mon</p>
-                          <br />
-                          <p class="date_of_mon">26</p>
-                        </div>
-                      </div>
-                      <div class="Tuesday">
-                        <div class="date">
-                          <p class="day_of_week">Tue</p>
-                          <br />
-                          <p class="date_of_tue">27</p>
-                        </div>
-                      </div>
-                      <div class="Wednesday">
-                        <div class="date">
-                          <p class="day_of_week">Wed</p>
-                          <br />
-                          <p class="date_of_wed">28</p>
-                        </div>
-                      </div>
-                      <div class="Thursday">
-                        <div class="date">
-                          <p class="day_of_week">Thu</p>
-                          <br />
-                          <p class="date_of_thu">29</p>
-                        </div>
-                      </div>
-                      <div class="Friday">
-                        <div class="date">
-                          <p class="day_of_week">Fri</p>
-                          <br />
-                          <p class="date_of_fri">30</p>
-                        </div>
-                      </div>
-                      <div class="Saturday">
-                        <div class="date">
-                          <p class="day_of_week">Sat</p>
-                          <br />
-                          <p class="date_of_sat">31</p>
-                        </div>
-                      </div>
-                    </div>
-                    <div class="time_interval">
-                      <div class="time">
-                      </div>
-                      <div class="time-slots"></div>
-                    </div>
-                  </section>
-                </div>
-            </div>
+                        <div class="time_interval">
+                            <div class="time">
+                            </div>
+                            <div class="time-slots"></div>
+                        </div> 
+                </section>
 
-            <!-- <div class="bottom">
+            <div class="bottom">
                 <div class="option">
                     <button class="option-button 1"><img src="/static/Add_round.svg"></button>
                 </div>
@@ -204,7 +184,7 @@
                 <div class="option">
                     <button class="option-button 3"><img src="/static/Group_fill.svg"></button>
                 </div>
-            </div> -->
+            </div>
         </main>
         <script>
             document.addEventListener('DOMContentLoaded', function() {
