--- a/timenest-landing-page/static/styles/style_main.css
+++ b/timenest-landing-page/static/styles/style_main.css
@@ -655,6 +655,7 @@ justify-content: end;
     height: 180px;
     justify-content: space-between;
     align-items: center;
+    gap: 1rem;
 }
 
 .calendar-zone-top .today {
